[gd_scene load_steps=14 format=3 uid="uid://dk3mlil5uaye1"]

[ext_resource type="Script" path="res://scenes/vfx/environment/damage_indicator.gd" id="1_xos6u"]
[ext_resource type="AudioStream" uid="uid://ddt5dmii7jjyu" path="res://assets/sfx/08_SE_BATTLE_cut_1.ogg" id="2_07gde"]
[ext_resource type="Texture2D" uid="uid://c76uotck50bgx" path="res://addons/kenney_particle_pack/star_09.png" id="2_i2bhv"]
[ext_resource type="AudioStream" uid="uid://bfhy2ai43hs2x" path="res://assets/sfx/10_SE_BATTLE_bow_hit_2.ogg" id="3_pdmys"]

[sub_resource type="Curve" id="Curve_rxxf4"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(0.0793651, 1), 0.0, 0.0, 0, 0, Vector2(0.210317, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_klx7d"]
curve = SubResource("Curve_rxxf4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n6eid"]
emission_shape = 1
emission_sphere_radius = 1.5
direction = Vector3(0, 0, 0)
spread = 0.0
gravity = Vector3(0, 0, 0)
scale_max = 3.0
scale_curve = SubResource("CurveTexture_klx7d")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_opg8s"]
transparency = 1
albedo_color = Color(1, 0.490196, 0, 1)
albedo_texture = ExtResource("2_i2bhv")
emission_enabled = true
emission = Color(1, 0.870588, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="QuadMesh" id="QuadMesh_nxx3x"]
material = SubResource("StandardMaterial3D_opg8s")

[sub_resource type="SystemFont" id="SystemFont_er1lm"]
font_names = PackedStringArray("Verdana")
subpixel_positioning = 0

[sub_resource type="Animation" id="Animation_3dt1e"]
resource_name = "Crit"
length = 2.0
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 5, 1, 0.2, 1, 1.5, 1.5, 1.5, 1.5, 1, 1, 1, 1, 2, 1, 0, 2, 0)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5, 2),
"transitions": PackedFloat32Array(1, 0.25, -2, 0.5),
"update": 0,
"values": [0.0, 1.25, 2.25, 3.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 3.581, 2.07053),
"update": 0,
"values": [Color(0.784314, 0.784314, 0, 1), Color(1, 1, 1, 1), Color(0.784314, 0.784314, 0, 1)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_pdmys")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_lt2n5"]
resource_name = "Damage"
length = 2.0
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 5, 1, 0.2, 1, 1, 1, 1, 1.5, 1, 1, 1, 1, 2, 1, 0, 0, 0)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5, 2),
"transitions": PackedFloat32Array(1, 0.25, -2, 0.5),
"update": 0,
"values": [0.0, 1.0, 1.5, 0.0]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_07gde")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yec48"]
_data = {
"Crit": SubResource("Animation_3dt1e"),
"Damage": SubResource("Animation_lt2n5")
}

[node name="Position" type="Node3D"]
script = ExtResource("1_xos6u")

[node name="HitSpark" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
emitting = false
amount = 1
one_shot = true
transform_align = 1
process_material = SubResource("ParticleProcessMaterial_n6eid")
draw_pass_1 = SubResource("QuadMesh_nxx3x")

[node name="DamageIndicator" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 5, 0, 0, 0, 1, 0, 0, 0)
layers = 4
billboard = 1
fixed_size = true
texture_filter = 0
render_priority = 127
outline_render_priority = 126
modulate = Color(0.784314, 0.784314, 0, 1)
text = "Title T

"
font = SubResource("SystemFont_er1lm")
font_size = 8
outline_size = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="DamageIndicator"]
libraries = {
"": SubResource("AnimationLibrary_yec48")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DamageIndicator"]
bus = &"Swing"

[connection signal="animation_finished" from="DamageIndicator/AnimationPlayer" to="DamageIndicator" method="_on_animation_player_animation_finished"]
